Add job for ssl-dr-suite in CSIT tests
Change-Id: Ic8c4ebff3ceeaf8402ffc0c301c9bab2b57d46fa
Issue-ID: DMAAP-1004
Signed-off-by: econwar <conor.ward@est.tech>

--- a/jjb/dmaap/dmaap-datarouter-csit.yaml
+++ b/jjb/dmaap/dmaap-datarouter-csit.yaml
@@ -14,4 +14,7 @@
       - 'dr-suite':
           trigger_jobs:
             - '{project-name}-{stream}-docker-java-shell-daily'
+      - 'ssl-dr-suite':
+          trigger_jobs:
+            - '{project-name}-{stream}-docker-java-shell-daily'
     robot-options: ''
