--- a/jjb/global-defaults.yaml
+++ b/jjb/global-defaults.yaml
@@ -26,6 +26,7 @@
 
     # Maven
     mvn-params: ''
+    mvn-staging-id: 'ecomp-staging'
     onap-infra-mvn-opts: |
         --show-version
         --batch-mode
@@ -33,6 +34,7 @@
         -Djenkins
         -Dmaven.repo.local=/tmp/r
         -Dorg.ops4j.pax.url.mvn.localRepository=/tmp/r
+    staging-profile-id: 176c31dfe190a
 
     # Timeout in minutes
     build-timeout: 90
