--- a/jjb/multicloud/multicloud-openstack-starlingx-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-starlingx-csit.yaml
@@ -2,11 +2,14 @@
 - project:
     name: multicloud-openstack-starlingx-csit
     jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'multicloud-starlingx'
     stream: 'master'
     functionality:
       - 'functionality1':
-          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 
+            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+            - 'multicloud-openstack-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
