No need for Trigger in Master.
Trigger only in Casablanca, has been removed going forward.

Change-Id: Ib842c425c195b1e97094ac95267fd17d5dc8c7cc
Issue-ID: MUSIC-297
Signed-off-by: Nelson,Thomas(tn1381)(arthurdent3) <tn1381@att.com>

--- a/jjb/music/music-trigger.yaml
+++ b/jjb/music/music-trigger.yaml
@@ -11,8 +11,8 @@
       - '{project-name}-{stream}-{subproject}-merge-java'
     project: 'music'
     stream:
-      - 'trigger-master':
-          branch: 'master'
+      - 'trigger-casablanca':
+          branch: 'casablanca'
     mvn-settings: 'music-settings'
     files: '**'
     archive-artifacts: ''
