--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1336,7 +1336,7 @@
     <<: *merge_java_defaults
     name: '{project-name}-{stream}-sdc-merge-java'
 
-    node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
     build-timeout: 120
 
     builders:
