Migrate to gerrit-maven-stage (SDC)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: Idaa93af7768ec3af79b9d43c0f224cffe696b6f9
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-property.yaml
@@ -4,6 +4,7 @@
     project-name: 'sdc-dcae-d-dt-be-property'
     jobs:
       - '{project-name}-{stream}-verify-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
     project: 'sdc/dcae-d/dt-be-property'
