--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -10,6 +10,7 @@
     project-name: 'sdc-dcae-d-ci'
     jobs:
       - '{project-name}-{stream}-verify-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
