--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -4,6 +4,7 @@
     project-name: 'sdc-dcae-d-dt-be-main'
     jobs:
       - '{project-name}-{stream}-verify-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-docker-version-java-daily':
