--- a/jjb/sdc/sdc-sdc-titan-cassandra.yaml
+++ b/jjb/sdc/sdc-sdc-titan-cassandra.yaml
@@ -10,6 +10,7 @@
     project-name: 'sdc-sdc-titan-cassandra'
     jobs:
       - '{project-name}-{stream}-verify-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
     project: 'sdc/sdc-titan-cassandra'
