--- a/jjb/vfc/vfc-nfvo-lcm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-java.yaml
@@ -10,6 +10,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
