--- a/jjb/vfc/vfc-nfvo-wfengine-java.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-java.yaml
@@ -21,6 +21,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
       - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
           mvn-goals: 'clean'
