--- a/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-juju.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-gvnfm-juju.yaml
@@ -15,6 +15,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
     files: '**'
     archive-artifacts: ''
