Migrate to gerrit-maven-stage (VFC)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I1ee12b9f92e7a230886ba39cf09cafc4446c688d
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-root.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-root.yaml
@@ -15,6 +15,7 @@
       - '{project-name}-{stream}-merge-profile-java':
           build-node: ubuntu1604-docker-8c-8g
           pattern: 'pom.xml'
+      - gerrit-maven-stage      
       - '{project-name}-{stream}-release-version-profile-java-daily'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
