Migrate to gerrit-maven-stage (LOG)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I8eaf931af7411a70dd4c920a52245acad2cd8ced
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/logging-analytics/logging-analytics.yaml
+++ b/jjb/logging-analytics/logging-analytics.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
@@ -79,6 +80,7 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
+      - gerrit-maven-stage
       - '{project-name}-{subproject}-python-staging-{stream}'
       - '{project-name}-{subproject}-python-release-{stream}'
     files: '**'
