--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -4,6 +4,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       #
       # see DMAAP-334 for more details, but
