Migrate to gerrit-maven-stage (DCAEGEN)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: Iec6c3d90c6c212c5dd6f950ad9fc496710a47f8c
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-datafile.yaml
@@ -17,6 +17,7 @@
     archive-artifacts: ''
     build-node: ubuntu1604-docker-8c-8g
     jobs:
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-verify-java':
           mvn-goals: 'clean install'
