Migrate to gerrit-maven-stage (VNFSDK)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I77f1c4bcd60ae9402a69ab62977177b7805fe460
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-ves-agent.yaml
+++ b/jjb/vnfsdk/vnfsdk-ves-agent.yaml
@@ -12,6 +12,7 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - gerrit-maven-stage
     project: 'vnfsdk/ves-agent'
     stream:
       - 'master':
