--- a/jjb/vid/vid.yaml
+++ b/jjb/vid/vid.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
     project: 'vid'
