--- a/jjb/policy/policy-parent.yaml
+++ b/jjb/policy/policy-parent.yaml
@@ -5,6 +5,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily':
           disabled: true
 
@@ -23,6 +24,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily':
           disabled: true
 
