Migrate to gerrit-maven-stage (AAF)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I1f1a97150785f2625fc7a29787303a3359e9f9b1
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-sms.yaml
+++ b/jjb/aaf/aaf-sms.yaml
@@ -8,6 +8,7 @@
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-{subproject}-release-version-java-daily':
           pom:
             'sms-client/java/pom.xml'
