Migrate to gerrit-maven-stage (APPC)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I32d7fd4bb0b532408b6e5366633490028fbfc307
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -7,6 +7,7 @@
           build-node: ubuntu1604-builder-8c-8g
       - '{project-name}-{stream}-merge-java':
           build-node: ubuntu1604-builder-8c-8g
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily':
           build-node: ubuntu1604-builder-8c-8g
 
