Migrate to gerrit-maven-stage (CLAMP)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: I78c4d25afe3f690bfe8b899e8bfebdfd8a6d072b
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -9,6 +9,7 @@
     name: clamp
     project-name: 'clamp'
     jobs:
+      - gerrit-maven-stage
       - '{project-name}-{stream}-verify-java-checkstyle':
          mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
       - '{project-name}-{stream}-merge-properties-java':
