Migrate to gerrit-maven-stage (MUSIC)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: Ie8dd9828a80930b363c15fa7de61d8a809428f23
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/music/music-mdbc.yaml
+++ b/jjb/music/music-mdbc.yaml
@@ -5,6 +5,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
     project: 'music/mdbc'
     stream:
