Migrate to gerrit-maven-stage (PORTAL)
Migrate to use gerrit-maven-stage from
global-jjb to allow the generation of
signed release artifacts that will reduce
release processing time.

Change-Id: If7d9b52a4487836629a5ce1db46fc4b1d71e351f
Issue-ID: CIMAN-234
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -9,6 +9,7 @@
     name: portal
     project-name: 'portal'
     jobs:
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-java-daily'
     project: 'portal'
     stream:
