--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-{subproject}-release-java-daily'
     project: 'portal/sdk'
     stream:
