--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           build-node: 'ubuntu1604-docker-8c-8g'
