--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - gerrit-maven-stage
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
     project: 'integration'
     subproject:
