[VVP] - Daily JJB for VVP validation scripts
Create a daily job to generate a traceability artifact to be
used by other projects.

Issue-ID: VNFRQTS-533
Change-Id: I920197e32a364d40c670ec7bef50b80308802e07
Signed-off-by: Hagop Bozawglanian <hagop.bozawglanian@att.com>

--- a/jjb/vvp/vvp-validation-scripts.yaml
+++ b/jjb/vvp/vvp-validation-scripts.yaml
@@ -32,3 +32,15 @@
     mvn-settings: 'vvp-validation-scripts-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vvp-validation-scripts-tracability-matrix
+    project: 'vvp/validation-scripts'
+    project-name: 'vvp-validation-scripts'
+    stream:
+      - 'master':
+          branch: 'master'
+    jobs:
+      - '{project-name}-{stream}-build-and-upload':
+          script:
+              !include-raw-escape: 'build-csv.sh'
