--- a/jjb/vvp/vvp-validation-scripts.yaml
+++ b/jjb/vvp/vvp-validation-scripts.yaml
@@ -32,3 +32,13 @@
     mvn-settings: 'vvp-validation-scripts-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
+
+- project:
+    name: vvp-validation-scripts-tracability-matrix
+    project: 'vvp/validation-scripts'
+    project-name: 'vvp-validation-scripts'
+    stream:
+      - 'master':
+          branch: 'master'
+    jobs:
+      - '{project-name}-{stream}-upload-csv-to-nexus'
