[VNFRQTS] - Daily JJB for VNFRQTS for json
Daily JJB to generate the needs.json including all the requirements.

Issue-ID: VNFRQTS-534

Change-Id: Id28c469a6144c22c4652a8e2a70bd231eb5a0087
Signed-off-by: Hagop Bozawglanian <hagop.bozawglanian@att.com>

--- a/jjb/vnfrqts/vnfrqts-requirements.yaml
+++ b/jjb/vnfrqts/vnfrqts-requirements.yaml
@@ -7,3 +7,13 @@
     project-name: 'vnfrqts-requirements'
     branch: 'master'
     mvn-settings: 'vnfrqts-requirements-settings'
+
+- project:
+    name: vnfrqts-requirements
+    project: 'vnfrqts/requirements'
+    project-name: 'vnfrqts-requirements'
+    stream:
+      - 'master':
+          branch: 'master'
+    jobs:
+      - '{project-name}-{stream}-upload-json-to-nexus'
