Update CLM and SONAR jobs to master
Change-Id: Ieb77bce495a0f3b4db16229a3312dd10a07baa89
Issue-ID: SDC-2098
Signed-off-by: Sonsino, Ofir (os0695) <os0695@intl.att.com>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -44,8 +44,6 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'casablanca':
-          branch: 'casablanca'
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
@@ -78,7 +76,7 @@
     build-node: ubuntu1604-builder-8c-8g
     project: 'sdc'
     project-name: 'sdc'
-    branch: 'casablanca'
+    branch: 'master'
     mvn-settings: 'sdc-settings'
     mvn-params: '-Djacoco.skip=false -Dsonar.branch={branch} -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
     mvn-goals: 'clean install'
@@ -95,5 +93,5 @@
     project: sdc
     project-name: 'sdc'
     build-node: ubuntu1604-docker-8c-8g
-    branch: 'casablanca'
+    branch: 'master'
     mvn-settings: 'sdc-settings'
