sdc merge jobs run on wrong build node
the sdc merge jobs are failing since we allowed
for the parameterization of build nodes.
Setting the correct build node

Change-Id: I9a98f2744ba552c3ff682064b19945bd3ff44293
Issue-ID: CIMAN-236
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/sdc/sdc-sdc-docker-base.yaml
+++ b/jjb/sdc/sdc-sdc-docker-base.yaml
@@ -7,6 +7,7 @@
       - '{project-name}-{stream}-sdc-merge-java':
           docker-pom: 'pom.xml'
           mvn-profile: 'default'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'sdc/sdc-docker-base'
     stream:
       - 'master':
