--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -32,6 +32,7 @@
       - '{project-name}-{stream}-sdc-merge-java':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
+          build-node: ubuntu1604-docker-8c-8g
           mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
       - '{project-name}-{stream}-release-version-java-daily':
           mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
