temporary disable arm64 docker build for sdnc
The docker build jobs on arm64 will not pass
until the dockerhub migration is approved
and implemented.

Change-Id: I83b982036951e957e60b1e33dabfe37747a195e4
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -36,23 +36,23 @@
     files: '**'
     archive-artifacts: ''
     build-node: queue-docker-4c-4g
-
-- project:
-    name: sdnc-oam-docker-arm64
-    project-name: 'sdnc-oam-arm64'
-    jobs:
-      - 'docker-version-java-daily':
-          docker-pom: 'pom.xml'
-          mvn-profile: 'docker'
-          mvn-params: '-Dmaven.test.skip=true'
-    project: 'sdnc/oam'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'sdnc-oam-settings'
-    files: '**'
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
+#
+#- project:
+#    name: sdnc-oam-docker-arm64
+#    project-name: 'sdnc-oam-arm64'
+#    jobs:
+#      - 'docker-version-java-daily':
+#          docker-pom: 'pom.xml'
+#          mvn-profile: 'docker'
+#          mvn-params: '-Dmaven.test.skip=true'
+#    project: 'sdnc/oam'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'sdnc-oam-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#    build-node: ubuntu1604-docker-arm64-4c-2g
 
 - project:
     name: sdnc-oam-clm
