--- a/jjb/msb/msb-discovery.yaml
+++ b/jjb/msb/msb-discovery.yaml
@@ -21,24 +21,24 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
-- project:
-    name: msb-discovery-arm64
-    project-name: 'msb-discovery-arm64'
-    jobs:
-      - '{project-name}-{stream}-docker-java-version-shell-daily':
-          docker-pom: 'pom.xml'
-          mvn-goals: 'install'
-          script:
-            !include-raw-escape: 'build-discovery-docker-image.sh'
-          build-node: ubuntu1604-docker-arm64-4c-2g
-    project: 'msb/discovery'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'msb-discovery-settings'
-    files: '**'
-    archive-artifacts: ''
-
+#- project:
+#    name: msb-discovery-arm64
+#    project-name: 'msb-discovery-arm64'
+#    jobs:
+#      - '{project-name}-{stream}-docker-java-version-shell-daily':
+#          docker-pom: 'pom.xml'
+#          mvn-goals: 'install'
+#          script:
+#            !include-raw-escape: 'build-discovery-docker-image.sh'
+#          build-node: ubuntu1604-docker-arm64-4c-2g
+#    project: 'msb/discovery'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'msb-discovery-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#
 - project:
     name: msb-discovery-sonar
     jobs:
