temporary disable arm64 docker build for logging
The docker build jobs on arm64 will not pass
until the dockerhub migration is approved
and implemented.

Change-Id: I3a6628447acff933cc3909a4f1e123a0e177bea8
iIssue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-network-discovery-context-builder.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-network-discovery-context-builder.yaml
@@ -23,26 +23,26 @@
     build-node: ubuntu1604-builder-4c-4g
     maven-version: 'mvn35'
 
-- project:
-    name: logging-analytics-pomba-pomba-arm64-network-discovery-context-builder
-    project-name: logging-analytics-pomba-pomba-arm64-network-discovery-context-builder
-    jobs:
-      - '{project-name}-{stream}-docker-java-daily':
-          docker-pom: 'pom.xml'
-          mvn-profile: 'docker'
-          mvn-params: '-Dmaven.test.skip=true'
-    project: logging-analytics/pomba/pomba-network-discovery-context-builder
-    stream:
-      - 'master':
-          branch: 'master'
-      - 'casablanca':
-          branch: 'casablanca'
-    mvn-settings: logging-analytics-pomba-pomba-network-discovery-context-builder-settings
-    files: '**'
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
-    maven-version: 'mvn35'
-
+#- project:
+#    name: logging-analytics-pomba-pomba-arm64-network-discovery-context-builder
+#    project-name: logging-analytics-pomba-pomba-arm64-network-discovery-context-builder
+#    jobs:
+#      - '{project-name}-{stream}-docker-java-daily':
+#          docker-pom: 'pom.xml'
+#          mvn-profile: 'docker'
+#          mvn-params: '-Dmaven.test.skip=true'
+#    project: logging-analytics/pomba/pomba-network-discovery-context-builder
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#      - 'casablanca':
+#          branch: 'casablanca'
+#    mvn-settings: logging-analytics-pomba-pomba-network-discovery-context-builder-settings
+#    files: '**'
+#    archive-artifacts: ''
+#    build-node: ubuntu1604-docker-arm64-4c-2g
+#    maven-version: 'mvn35'
+#
 - project:
     name: logging-analytics-pomba-pomba-network-discovery-context-builder-sonar
     jobs:
