temporary disable arm64 docker build for vnfsdk
The docker build jobs on arm64 will not pass
until the dockerhub migration is approved
and implemented.

Change-Id: I005e2baf50858e57241b28bcd910285564dc6b41
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vnfsdk/vnfsdk-refrepo.yaml
+++ b/jjb/vnfsdk/vnfsdk-refrepo.yaml
@@ -25,27 +25,27 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
-- project:
-    name: vnfsdk-refrepo-arm64
-    project-name: 'vnfsdk-refrepo-arm64'
-    jobs:
-      - '{project-name}-{stream}-aai-docker-java-daily':
-          pom: 'vnfmarket-be/deployment/docker/docker-refrepo/pom.xml'
-          mvn-goals: 'docker:build'
-          docker-image-name: 'onap/vnfsdk/refrepo'
-      - '{project-name}-{stream}-docker-version-java-daily':
-          docker-pom: 'vnfmarket-be/deployment/docker/docker-postgres/pom.xml'
-          mvn-profile: 'docker'
-          mvn-params: '-Dmaven.test.skip=true'
-    project: 'vnfsdk/refrepo'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'vnfsdk-refrepo-settings'
-    files: '**'
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
-
+#- project:
+#    name: vnfsdk-refrepo-arm64
+#    project-name: 'vnfsdk-refrepo-arm64'
+#    jobs:
+#      - '{project-name}-{stream}-aai-docker-java-daily':
+#          pom: 'vnfmarket-be/deployment/docker/docker-refrepo/pom.xml'
+#          mvn-goals: 'docker:build'
+#          docker-image-name: 'onap/vnfsdk/refrepo'
+#      - '{project-name}-{stream}-docker-version-java-daily':
+#          docker-pom: 'vnfmarket-be/deployment/docker/docker-postgres/pom.xml'
+#          mvn-profile: 'docker'
+#          mvn-params: '-Dmaven.test.skip=true'
+#    project: 'vnfsdk/refrepo'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'vnfsdk-refrepo-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#    build-node: ubuntu1604-docker-arm64-4c-2g
+#
 - project:
     name: vnfsdk-refrepo-sonar
     jobs:
