--- a/jjb/cli/cli.yaml
+++ b/jjb/cli/cli.yaml
@@ -27,24 +27,24 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
-- project:
-    name: cli-arm64
-    project-name: 'cli-arm64'
-    jobs:
-      - '{project-name}-{stream}-aai-docker-java-daily':
-          pom: 'deployment/docker/pom.xml'
-          mvn-goals: 'docker:build'
-          docker-image-name: 'onap/cli'
-
-    project: 'cli'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'cli-settings'
-    files: '**'
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
-
+#- project:
+#    name: cli-arm64
+#    project-name: 'cli-arm64'
+#    jobs:
+#      - '{project-name}-{stream}-aai-docker-java-daily':
+#          pom: 'deployment/docker/pom.xml'
+#          mvn-goals: 'docker:build'
+#          docker-image-name: 'onap/cli'
+#
+#    project: 'cli'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'cli-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#    build-node: ubuntu1604-docker-arm64-4c-2g
+#
 - project:
     name: cli-sonar
     jobs:
