--- a/jjb/multicloud/multicloud-openstack-pike-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-pike-csit.yaml
@@ -10,6 +10,6 @@
       - 'functionality1':
           trigger_jobs:
             - 'multicloud-openstack-master-docker-java-version-shell-daily'
-            - 'multicloud-openstack-arm64-master-docker-java-version-shell-daily'
+#            - 'multicloud-openstack-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
