--- a/jjb/multicloud/multicloud-openstack-vmware-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-csit.yaml
@@ -10,6 +10,6 @@
       - 'functionality1':
           trigger_jobs:
             -  'multicloud-openstack-vmware-master-docker-java-version-shell-daily'
-            -  'multicloud-openstack-vmware-arm64-master-docker-java-version-shell-daily'
+#            -  'multicloud-openstack-vmware-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
