temporary disable arm64 docker build for vid
The docker build jobs on arm64 will not pass
until the dockerhub migration is approved
and implemented.

Change-Id: I16ec6dfc17e4c15a7a60e3149549404da145e1e8
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vid/vid.yaml
+++ b/jjb/vid/vid.yaml
@@ -42,22 +42,22 @@
     archive-artifacts: ''
     build-node: queue-docker-4c-4g
 
-- project:
-    name: vid-docker-arm64
-    project-name: 'vid-arm64'
-    jobs:
-      - 'docker-version-java-daily':
-          docker-pom: 'pom.xml'
-          mvn-profile: 'docker'
-    project: 'vid'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'vid-settings'
-    files: '**'
-    archive-artifacts: ''
-    build-node: ubuntu1604-docker-arm64-4c-2g
-
+#- project:
+#    name: vid-docker-arm64
+#    project-name: 'vid-arm64'
+#    jobs:
+#      - 'docker-version-java-daily':
+#          docker-pom: 'pom.xml'
+#          mvn-profile: 'docker'
+#    project: 'vid'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'vid-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#    build-node: ubuntu1604-docker-arm64-4c-2g
+#
 - project:
     name: vid-sonar
     jobs:
