--- a/jjb/vid/vid-csit.yaml
+++ b/jjb/vid/vid-csit.yaml
@@ -15,16 +15,16 @@
           trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
 
-- project:
-    name: vid-csit-arm64
-    jobs:
-      - '{project-name}-arm64-{stream}-verify-csit-{functionality}'
-      - '{project-name}-arm64-{stream}-csit-{functionality}'
-    project-name: 'vid'
-    stream:
-      - 'master':
-          branch: 'master'
-    functionality:
-      - 'healthCheck':
-          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
-    robot-options: ''
+#- project:
+#    name: vid-csit-arm64
+#    jobs:
+#      - '{project-name}-arm64-{stream}-verify-csit-{functionality}'
+#      - '{project-name}-arm64-{stream}-csit-{functionality}'
+#    project-name: 'vid'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    functionality:
+#      - 'healthCheck':
+#          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
+#    robot-options: ''
