Fix SDC merge jobs.
Use correct docker node to run sdc-merge-java.
The build node is a parameter that was not
provided.

Change-Id: I71ee1573bbd8b95ef59b1b77eca0aee901095f36
Issue-ID: CIMAN-34
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc-sdc-docker-base.yaml
+++ b/jjb/sdc/sdc-sdc-docker-base.yaml
@@ -5,6 +5,7 @@
     project-name: 'sdc-sdc-docker-base'
     jobs:
       - '{project-name}-{stream}-sdc-merge-java':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'default'
     project: 'sdc/sdc-docker-base'
@@ -24,6 +25,7 @@
     project-name: 'sdc-sdc-docker-base-arm64'
     jobs:
       - '{project-name}-{stream}-sdc-merge-java':
+          build-node: 'ubuntu1604-docker-8c-8g'
           docker-pom: 'pom.xml'
           mvn-profile: 'default'
     project: 'sdc/sdc-docker-base'
