temporary disable arm64 docker build for sdc
The docker build jobs on arm64 will not pass
until the dockerhub migration is approved
and implemented.

Change-Id: I266ce63be85b0cdb619a7d64d5f4cc53e84055ae
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -28,24 +28,24 @@
     archive-artifacts: ''
     build-timeout: 60
 
-- project:
-    name: sdc-dcae-d-ci-arm64
-    project-name: 'sdc-dcae-d-ci-arm64'
-    jobs:
-      - '{project-name}-{stream}-docker-version-java-daily':
-         docker-pom: 'pom.xml'
-         mvn-profile: 'docker'
-         mvn-params: '-DskipTests=true'
-         build-node: 'ubuntu1604-docker-arm64-4c-2g'
-    project: 'sdc/dcae-d/ci'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'sdc-dcae-d-ci-settings'
-    files: '**'
-    archive-artifacts: ''
-    build-timeout: 60
-
+#- project:
+#    name: sdc-dcae-d-ci-arm64
+#    project-name: 'sdc-dcae-d-ci-arm64'
+#    jobs:
+#      - '{project-name}-{stream}-docker-version-java-daily':
+#         docker-pom: 'pom.xml'
+#         mvn-profile: 'docker'
+#         mvn-params: '-DskipTests=true'
+#         build-node: 'ubuntu1604-docker-arm64-4c-2g'
+#    project: 'sdc/dcae-d/ci'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'sdc-dcae-d-ci-settings'
+#    files: '**'
+#    archive-artifacts: ''
+#    build-timeout: 60
+#
 - project:
     name: sdc-dcae-ci-sonar
     jobs:
