--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -22,23 +22,23 @@
     html-dir: 'archives'
     html-files: 'SDC_CI_Extent_Report.html'
 
-- project:
-    name: sdc-csit-arm64
-    jobs:
-      - '{project-name}-arm64-{stream}-verify-csit-{functionality}-testng'
-      - '{project-name}-arm64-{stream}-csit-{functionality}-testng'
-    project-name: 'sdc'
-    stream:
-      - 'master':
-          branch: 'master'
-    functionality:
-      - 'sanity':
-          trigger_jobs: '{project-name}-{stream}-sdc-merge-java'
-      - 'nightly':
-          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
-      - 'uiSanity':
-          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
-    robot-options: ''
-    branch: 'master'
-    html-dir: 'archives'
-    html-files: 'SDC_CI_Extent_Report.html'
+#- project:
+#    name: sdc-csit-arm64
+#    jobs:
+#      - '{project-name}-arm64-{stream}-verify-csit-{functionality}-testng'
+#      - '{project-name}-arm64-{stream}-csit-{functionality}-testng'
+#    project-name: 'sdc'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    functionality:
+#      - 'sanity':
+#          trigger_jobs: '{project-name}-{stream}-sdc-merge-java'
+#      - 'nightly':
+#          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
+#      - 'uiSanity':
+#          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
+#    robot-options: ''
+#    branch: 'master'
+#    html-dir: 'archives'
+#    html-files: 'SDC_CI_Extent_Report.html'
