--- a/jjb/appc/appc-csit.yaml
+++ b/jjb/appc/appc-csit.yaml
@@ -7,9 +7,7 @@
     project-name: 'appc'
     stream:
       - 'master':
-          branch: master
-      - 'casablanca':
-          branch: 'casablanca'
+          branch: 'master'
     functionality:
       - 'healthcheck':
           trigger_jobs: '{project-name}-{stream}-release-java-daily-checkstyle'
