--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -44,6 +44,10 @@
 
     builders:
       - shell: '{script}'
+      - lf-infra-create-netrc:
+          server-id: ecomp-raw
+      - shell: '{script}'
+      - lf-provide-maven-settings-cleanup
 
     publishers:
       - infra-shiplogs:
