--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -44,6 +44,13 @@
 
     builders:
       - shell: '{script}'
+      - lf-infra-create-netrc:
+          server-id: ecomp-raw
+      - inject:
+          properties-content: |
+            ARTIFACT_NAME=docs/data/needs.json
+      - shell: '{script}'
+      - lf-provide-maven-settings-cleanup
 
     publishers:
       - infra-shiplogs:
