--- a/jjb/vnfrqts/build-and-upload.yaml
+++ b/jjb/vnfrqts/build-and-upload.yaml
@@ -43,7 +43,14 @@
       - timed: 'H H * * *'
 
     builders:
-      - shell: '{script}'
+      - shell: '{obj:pre_script}'
+      - lf-infra-create-netrc:
+          server-id: raw
+      - inject:
+          properties-content: |
+            ARTIFACT_NAME=docs/data/needs.json
+      - shell: '{obj:post_script}'
+      - lf-provide-maven-settings-cleanup
 
     publishers:
       - infra-shiplogs:
